# simple_qap

./: .gitignore  CMakeLists.txt  README.md  build.sh  gm.py  run.sh  simple_qap.cpp  test.py
